# tf2_bot_kicker

./: Cargo.toml  README.md  bots.txt
cfg/: bots.cfg  recorded_bots.txt  settings.cfg
src/: analyser.rs  commander.rs  logwatcher.rs  main.rs  regexes.rs  server.rs  timer.rs
src/server/: bot_checker.rs  player.rs  settings.rs
