[package]
name = "tf2_bot_kicker"
version = "0.1.0"
authors = ["bash0"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# inputbot = "0.5.1"
inputbot = { git = "https://github.com/Googe14/InputBot" }
# inputbot = { path = "../input_bot_fork" }
regex = "1"
home = "0.5.3"
